fix z-index

--- a/project/public/css/style.css
+++ b/project/public/css/style.css
@@ -74,7 +74,7 @@ svg {
   position: relative;
   background-color: #111111;
   height: 30vh;
-  z-index: 99;
+  z-index: 96;
 }
 
 .no-right-border{
@@ -86,7 +86,7 @@ svg {
 }
 
 .arrows{
-  z-index: 100;
+  z-index: 98;
   display: none;
 }
 
@@ -120,7 +120,7 @@ svg {
   width: 100%;
   box-shadow: 0 1px 4px rgb(146 161 176 / 15%);
   position: fixed;
-  z-index: 100;
+  z-index: 99;
   top: 0;
   left: 0;
 }
@@ -1396,7 +1396,7 @@ footer .copyright p{
   left: 0;
   width: 100%;
   height: 100px;
-  z-index: 100;
+  z-index: 97;
 
   background: #F3F3F3;
   box-shadow: 0px -4px 4px 0px rgba(0, 0, 0, 0.25);
@@ -1784,7 +1784,7 @@ footer .copyright p{
     left: 50%;
     top: 0;
     transform: translateX(-50%);
-    z-index: 99;
+    z-index: 96;
   }
 
   .navBG-Black{
